@@ -1,3 +1,9 @@
+2021-05-14  Frank Ch. Eigler <fche@redhat.com>
+
+	PR27859
+	* run-debuginfod-find.sh: Test absence of 404-latch bug in client
+	curl handle reuse.
+
 2021-04-19  Martin Liska  <mliska@suse.cz>
 
 	* dwelf_elf_e_machine_string.c (main): Use startswith.
